Modificaciones cable y graficas

--- a/TareaSEPG2B.ipynb
+++ b/TareaSEPG2B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "1  0.928206 -11.404131  1620.000000  784.601810"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +203,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Para el rango de potencia aparente 1, se utilizaron los siguientes valores de compensación:\n",
+      "Potencia aparente: 600.0, Compensación: 150\n",
+      "Potencia aparente: 606.060606060606, Compensación: 150\n",
+      "Potencia aparente: 612.1212121212121, Compensación: 150\n",
+      "Potencia aparente: 618.1818181818181, Compensación: 150\n",
+      "Potencia aparente: 624.2424242424242, Compensación: 150\n",
+      "Potencia aparente: 630.3030303030303, Compensación: 150\n",
+      "Potencia aparente: 636.3636363636364, Compensación: 150\n",
+      "Potencia aparente: 642.4242424242424, Compensación: 150\n",
+      "Potencia aparente: 648.4848484848485, Compensación: 150\n",
+      "Potencia aparente: 654.5454545454545, Compensación: 150\n",
+      "Potencia aparente: 660.6060606060606, Compensación: 150\n",
+      "Potencia aparente: 666.6666666666666, Compensación: 150\n",
+      "Potencia aparente: 672.7272727272727, Compensación: 150\n",
+      "Potencia aparente: 678.7878787878788, Compensación: 150\n",
+      "Potencia aparente: 684.8484848484849, Compensación: 150\n",
+      "Potencia aparente: 690.9090909090909, Compensación: 150\n",
+      "Potencia aparente: 696.969696969697, Compensación: 150\n",
+      "Potencia aparente: 703.030303030303, Compensación: 150\n",
+      "Potencia aparente: 709.0909090909091, Compensación: 150\n",
+      "Potencia aparente: 715.1515151515151, Compensación: 150\n",
+      "Potencia aparente: 721.2121212121212, Compensación: 150\n",
+      "Potencia aparente: 727.2727272727273, Compensación: 150\n",
+      "Potencia aparente: 733.3333333333334, Compensación: 150\n",
+      "Potencia aparente: 739.3939393939394, Compensación: 150\n",
+      "Potencia aparente: 745.4545454545455, Compensación: 150\n",
+      "Potencia aparente: 751.5151515151515, Compensación: 150\n",
+      "Potencia aparente: 757.5757575757575, Compensación: 150\n",
+      "Potencia aparente: 763.6363636363636, Compensación: 150\n",
+      "Potencia aparente: 769.6969696969697, Compensación: 150\n",
+      "Potencia aparente: 775.7575757575758, Compensación: 150\n",
+      "Potencia aparente: 781.8181818181818, Compensación: 150\n",
+      "Potencia aparente: 787.8787878787879, Compensación: 150\n",
+      "Potencia aparente: 793.939393939394, Compensación: 150\n",
+      "Potencia aparente: 800.0, Compensación: 150\n",
+      "Potencia aparente: 806.060606060606, Compensación: 150\n",
+      "Potencia aparente: 812.1212121212121, Compensación: 150\n",
+      "Potencia aparente: 818.1818181818182, Compensación: 150\n",
+      "Potencia aparente: 824.2424242424242, Compensación: 150\n",
+      "Potencia aparente: 830.3030303030303, Compensación: 150\n",
+      "Potencia aparente: 836.3636363636364, Compensación: 150\n",
+      "Potencia aparente: 842.4242424242425, Compensación: 150\n",
+      "Potencia aparente: 848.4848484848485, Compensación: 150\n",
+      "Potencia aparente: 854.5454545454545, Compensación: 150\n",
+      "Potencia aparente: 860.6060606060606, Compensación: 150\n",
+      "Potencia aparente: 866.6666666666667, Compensación: 150\n",
+      "Potencia aparente: 872.7272727272727, Compensación: 150\n",
+      "Potencia aparente: 878.7878787878788, Compensación: 150\n",
+      "Potencia aparente: 884.8484848484849, Compensación: 150\n",
+      "Potencia aparente: 890.9090909090909, Compensación: 150\n",
+      "Potencia aparente: 896.969696969697, Compensación: 150\n",
+      "Potencia aparente: 903.030303030303, Compensación: 150\n",
+      "Potencia aparente: 909.090909090909, Compensación: 150\n",
+      "Potencia aparente: 915.1515151515151, Compensación: 150\n",
+      "Potencia aparente: 921.2121212121212, Compensación: 150\n",
+      "Potencia aparente: 927.2727272727273, Compensación: 150\n",
+      "Potencia aparente: 933.3333333333333, Compensación: 150\n",
+      "Potencia aparente: 939.3939393939394, Compensación: 150\n",
+      "Potencia aparente: 945.4545454545455, Compensación: 150\n",
+      "Potencia aparente: 951.5151515151515, Compensación: 150\n",
+      "Potencia aparente: 957.5757575757575, Compensación: 150\n",
+      "Potencia aparente: 963.6363636363636, Compensación: 150\n",
+      "Potencia aparente: 969.6969696969697, Compensación: 150\n",
+      "Potencia aparente: 975.7575757575758, Compensación: 150\n",
+      "Potencia aparente: 981.8181818181818, Compensación: 150\n",
+      "Potencia aparente: 987.8787878787879, Compensación: 150\n",
+      "Potencia aparente: 993.939393939394, Compensación: 150\n",
+      "Potencia aparente: 1000.0, Compensación: 150\n",
+      "Potencia aparente: 1006.060606060606, Compensación: 150\n",
+      "Potencia aparente: 1012.1212121212121, Compensación: 150\n",
+      "Potencia aparente: 1018.1818181818182, Compensación: 150\n",
+      "Potencia aparente: 1024.2424242424242, Compensación: 150\n",
+      "Potencia aparente: 1030.3030303030303, Compensación: 150\n",
+      "Potencia aparente: 1036.3636363636365, Compensación: 150\n",
+      "Potencia aparente: 1042.4242424242425, Compensación: 150\n",
+      "Potencia aparente: 1048.4848484848485, Compensación: 150\n",
+      "Potencia aparente: 1054.5454545454545, Compensación: 150\n",
+      "Potencia aparente: 1060.6060606060605, Compensación: 150\n",
+      "Potencia aparente: 1066.6666666666667, Compensación: 150\n",
+      "Potencia aparente: 1072.7272727272727, Compensación: 150\n",
+      "Potencia aparente: 1078.7878787878788, Compensación: 150\n",
+      "Potencia aparente: 1084.848484848485, Compensación: 150\n",
+      "Potencia aparente: 1090.909090909091, Compensación: 150\n",
+      "Potencia aparente: 1096.969696969697, Compensación: 150\n",
+      "Potencia aparente: 1103.030303030303, Compensación: 150\n",
+      "Potencia aparente: 1109.090909090909, Compensación: 150\n",
+      "Potencia aparente: 1115.151515151515, Compensación: 150\n",
+      "Potencia aparente: 1121.2121212121212, Compensación: 150\n",
+      "Potencia aparente: 1127.2727272727273, Compensación: 150\n",
+      "Potencia aparente: 1133.3333333333335, Compensación: 150\n",
+      "Potencia aparente: 1139.3939393939395, Compensación: 150\n",
+      "Potencia aparente: 1145.4545454545455, Compensación: 150\n",
+      "Potencia aparente: 1151.5151515151515, Compensación: 150\n",
+      "Potencia aparente: 1157.5757575757575, Compensación: 150\n",
+      "Potencia aparente: 1163.6363636363635, Compensación: 150\n",
+      "Potencia aparente: 1169.6969696969697, Compensación: 150\n",
+      "Potencia aparente: 1175.7575757575758, Compensación: 150\n",
+      "Potencia aparente: 1181.8181818181818, Compensación: 150\n",
+      "Potencia aparente: 1187.878787878788, Compensación: 150\n",
+      "Potencia aparente: 1193.939393939394, Compensación: 150\n",
+      "Potencia aparente: 1200.0, Compensación: 150\n",
       "Para el rango de potencia aparente 2, se utilizaron los siguientes valores de compensación:\n",
       "Potencia aparente: 1200.0, Compensación: 0\n",
       "Potencia aparente: 1206.060606060606, Compensación: 0\n",
@@ -385,15 +486,14 @@
     "\n",
     "# Imprimir los valores de compensación\n",
     "for i, compensation_values_for_range in enumerate(compensation_values):\n",
-    "    if i == 1:  # Solo para el rango 2\n",
-    "        print(f\"Para el rango de potencia aparente {i+1}, se utilizaron los siguientes valores de compensación:\")\n",
-    "        for s, compensation_value in zip(s_ranges[i], compensation_values_for_range):\n",
-    "            print(f\"Potencia aparente: {s}, Compensación: {compensation_value}\")\n"
+    "    print(f\"Para el rango de potencia aparente {i+1}, se utilizaron los siguientes valores de compensación:\")\n",
+    "    for s, compensation_value in zip(s_ranges[i], compensation_values_for_range):\n",
+    "        print(f\"Potencia aparente: {s}, Compensación: {compensation_value}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
