--- a/TareaSEPG2B.ipynb
+++ b/TareaSEPG2B.ipynb
@@ -2017,7 +2017,7 @@
     "import pandapower.estimation\n",
     "import pandapower.plotting as pplot\n",
     "\n",
-    "#Crear red vacia (net)\n",
+    "#Crear red vacia (net) 1\n",
     "net = pp.create_empty_network()\n",
     "#Crear barras\n",
     "line_data = {\"r_ohm_per_km\": 0.02, \"x_ohm_per_km\": 0.115, \"c_nf_per_km\": 19.1, \"max_i_ka\": 1., \"type\": \"linea\"}\n",
