--- a/Tarea 2/Programabase.ipynb
+++ b/Tarea 2/Programabase.ipynb
@@ -2,50 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nachi\\AppData\\Local\\Temp\\ipykernel_30996\\1488538898.py:54: FutureWarning:\n",
-      "\n",
-      "DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matriz de Admitancia (Forma de Tabla):\n",
-      "                    Barra 1                  Barra 2                  Barra 3  \\\n",
-      "Barra 1  +18.0693-833.1437j       -18.0418+833.1317j          +0.0000+0.0000j   \n",
-      "Barra 2  -18.0418+833.1317j  +28090.8349-45050.0102j  -14036.3828+22117.9365j   \n",
-      "Barra 3     +0.0000+0.0000j  -14036.3828+22117.9365j  +23393.9714-36839.4693j   \n",
-      "Barra 4     +0.0000+0.0000j          +0.0000+0.0000j   -9357.5885+14745.2910j   \n",
-      "Barra 5     +0.0000+0.0000j          +0.0000+0.0000j          +0.0000+0.0000j   \n",
-      "Barra 6     +0.0000+0.0000j  -14036.3828+22117.9365j          +0.0000+0.0000j   \n",
-      "Barra 7     +0.0000+0.0000j          +0.0000+0.0000j          +0.0000+0.0000j   \n",
-      "\n",
-      "                         Barra 4                  Barra 5  \\\n",
-      "Barra 1          +0.0000+0.0000j          +0.0000+0.0000j   \n",
-      "Barra 2          +0.0000+0.0000j          +0.0000+0.0000j   \n",
-      "Barra 3   -9357.5885+14745.2910j          +0.0000+0.0000j   \n",
-      "Barra 4  +16375.7799-25770.9977j   -7018.1914+11058.9683j   \n",
-      "Barra 5   -7018.1914+11058.9683j  +16375.7799-25770.9977j   \n",
-      "Barra 6          +0.0000+0.0000j          +0.0000+0.0000j   \n",
-      "Barra 7          +0.0000+0.0000j   -9357.5885+14745.2910j   \n",
-      "\n",
-      "                         Barra 6                  Barra 7  \n",
-      "Barra 1          +0.0000+0.0000j          +0.0000+0.0000j  \n",
-      "Barra 2  -14036.3828+22117.9365j          +0.0000+0.0000j  \n",
-      "Barra 3          +0.0000+0.0000j          +0.0000+0.0000j  \n",
-      "Barra 4          +0.0000+0.0000j          +0.0000+0.0000j  \n",
-      "Barra 5          +0.0000+0.0000j   -9357.5885+14745.2910j  \n",
-      "Barra 6  +18715.1771-29452.5688j    -4678.7943+7372.6455j  \n",
-      "Barra 7    -4678.7943+7372.6455j  +14036.3828-22075.1716j  \n",
       "\n",
       "Resultados de las Barras:\n",
       "   vm_pu  va_degree      p_mw  q_mvar\n",
@@ -55,7 +18,11 @@
       "3 1.0292   -14.7303   52.5000 35.0000\n",
       "4 1.0284   -14.8649   22.5000 15.0000\n",
       "5 1.0324   -14.4698   15.0000 10.0000\n",
-      "6 1.0274   -14.8735   90.0000 60.0000\n"
+      "6 1.0274   -14.8735   90.0000 60.0000\n",
+      "El método de Newton-Raphson no convergió después de 100 iteraciones.\n",
+      "Resultados del método de Newton-Raphson:\n",
+      "Voltajes (en p.u.): [0.3604 0.0144 0.0049 0.0193 0.0095]\n",
+      "Ángulos (en grados): [-20.8908  -0.374   -3.7451  -0.8089  -3.7081]\n"
      ]
     }
    ],
@@ -104,22 +71,114 @@
     "    Q = Q_nominal_MVA * porcentaje\n",
     "    pp.create_load(net, bus=bus_dict[barra], p_mw=P, q_mvar=Q, name=f\"Carga en {barra}\")\n",
     "\n",
-    "# Ejecución de la simulación de flujo de potencia\n",
-    "pp.runpp(net, max_iteration=4000, tolerance_mva=1e-9)\n",
-    "\n",
-    "# Acceso y visualización de la matriz de admitancia como tabla\n",
-    "Ybus = net._ppc['internal']['Ybus']\n",
-    "Ybus_dense = np.array(Ybus.todense())\n",
-    "n_barras = 7  # Asegurarse de que este número coincida con el número de barras en la red\n",
-    "columnas = [f\"Barra {i+1}\" for i in range(n_barras)]  # Ajuste para que comience en 1\n",
-    "df_Ybus = pd.DataFrame(Ybus_dense, columns=columnas, index=columnas)\n",
-    "df_Ybus_complex = df_Ybus.applymap(lambda x: f\"{x.real:+.4f}{x.imag:+.4f}j\")\n",
-    "print(\"Matriz de Admitancia (Forma de Tabla):\")\n",
-    "print(df_Ybus_complex)\n",
-    "\n",
+    "# Flujo de potencia\n",
+    "pp.runpp(net, max_iteration=100, tolerance_mva=1e-9)\n",
     "# Imprimir resultados de simulación\n",
     "print(\"\\nResultados de las Barras:\")\n",
-    "print(net.res_bus)"
+    "print(net.res_bus)\n",
+    "\n",
+    "# Obtener la matriz de admitancia Ybus\n",
+    "Ybus = net._ppc['internal']['Ybus'].todense()\n",
+    "Y_real = np.real(Ybus)\n",
+    "Y_imag = np.imag(Ybus)\n",
+    "\n",
+    "# Potencias inyectadas en las barras PQ (MW y MVAR)\n",
+    "P_inyectado = np.array([0.2*P, 0.35*P, 0.15*P, 0.6*P, 0.1*P])  # MW\n",
+    "Q_inyectado = np.array([0.2*Q, 0.35*Q, 0.15*Q, 0.6*Q, 0.1*Q])  # MVAR\n",
+    "\n",
+    "# Valores iniciales\n",
+    "V_ini = np.ones(5)\n",
+    "theta_ini = np.zeros(5)\n",
+    "\n",
+    "\n",
+    "# Función para calcular las derivadas\n",
+    "def calcular_derivadas(V, theta, Y_real, Y_imag):\n",
+    "    n = len(V)\n",
+    "    H = np.zeros((n, n))\n",
+    "    N = np.zeros((n, n))\n",
+    "    M = np.zeros((n, n))\n",
+    "    L = np.zeros((n, n))\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i != j:\n",
+    "                H[i, j] = -V[i] * V[j] * (Y_real[i, j] * np.sin(theta[i] - theta[j]) - Y_imag[i, j] * np.cos(theta[i] - theta[j]))\n",
+    "                N[i, j] = -V[i] * (Y_real[i, j] * np.cos(theta[i] - theta[j]) + Y_imag[i, j] * np.sin(theta[i] - theta[j]))\n",
+    "                M[i, j] = V[i] * V[j] * (Y_real[i, j] * np.cos(theta[i] - theta[j]) + Y_imag[i, j] * np.sin(theta[i] - theta[j]))\n",
+    "                L[i, j] = -V[i] * (Y_real[i, j] * np.sin(theta[i] - theta[j]) - Y_imag[i, j] * np.cos(theta[i] - theta[j]))\n",
+    "            else:\n",
+    "                H[i, i] = V[i]**2 *(V[i]*np.sum(V[j] * (Y_real[i, j] * np.sin(theta[i] - theta[j]) - Y_imag[i, j] * np.cos(theta[i] - theta[j]))))\n",
+    "                N[i, i] = -V[i] * Y_real[i, i] - (np.sum(V[i] * (Y_real[i, j] * np.cos(theta[i] - theta[j]) + Y_imag[i, j] * np.sin(theta[i] - theta[j]))) / V[i])\n",
+    "                M[i, i] = V[i]**2 * Y_real[i, i] - np.sum(V[i] * (Y_real[i, j] * np.sin(theta[i] - theta[j]) - Y_imag[i, j] * np.cos(theta[i] - theta[j])))\n",
+    "                L[i, i] = V[i] * Y_imag[i, i] - (np.sum(V[i] * (Y_real[i, j] * np.cos(theta[i] - theta[j]) + Y_imag[i, j] * np.sin(theta[i] - theta[j]))) / V[i])\n",
+    "\n",
+    "    return H, N, M, L\n",
+    "\n",
+    "# Función para calcular las funciones de error\n",
+    "def calcular_f(V, theta, Y_real, Y_imag, P_inyectado, Q_inyectado):\n",
+    "    n = len(V)\n",
+    "    delta_P = np.zeros(n)\n",
+    "    delta_Q = np.zeros(n)\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        sum_P = 0.0\n",
+    "        sum_Q = 0.0\n",
+    "        for j in range(n):\n",
+    "            sum_P +=  V[j] * (Y_real[i, j] * np.cos(theta[i] - theta[j]) + Y_imag[i, j] * np.sin(theta[i] - theta[j]))\n",
+    "            sum_Q +=  V[j] * (Y_real[i, j] * np.sin(theta[i] - theta[j]) - Y_imag[i, j] * np.cos(theta[i] - theta[j]))\n",
+    "\n",
+    "        delta_P[i] = P_inyectado[i] - (V[i] *sum_P)\n",
+    "        delta_Q[i] = Q_inyectado[i] - (V[i] *sum_Q)\n",
+    "\n",
+    "    f = np.concatenate((delta_P, delta_Q))\n",
+    "    return f\n",
+    "\n",
+    "# Función para el método de Newton-Raphson\n",
+    "def newton_raphson(V, theta, Y_real, Y_imag, P_inyectado, Q_inyectado, tol=1e-9, max_iter=100):\n",
+    "    iter = 0\n",
+    "    error = tol + 1\n",
+    "\n",
+    "    while error > tol and iter < max_iter:\n",
+    "        H, N, M, L = calcular_derivadas(V, theta, Y_real, Y_imag)\n",
+    "        # Calcular las potencias activa y reactiva inyectadas en cada barra\n",
+    "        P_calc = np.zeros(len(V))\n",
+    "        Q_calc = np.zeros(len(V))\n",
+    "        for i in range(len(V)):\n",
+    "            for j in range(len(V)):\n",
+    "                P_calc[i] += V[i] * V[j] * (Y_real[i, j] * np.cos(theta[i] - theta[j]) + Y_imag[i, j] * np.sin(theta[i] - theta[j]))\n",
+    "                Q_calc[i] += V[i] * V[j] * (Y_real[i, j] * np.sin(theta[i] - theta[j]) - Y_imag[i, j] * np.cos(theta[i] - theta[j]))\n",
+    "        # Calcular el vector de desequilibrio f\n",
+    "        f_P = P_inyectado - P_calc\n",
+    "        f_Q = Q_inyectado - Q_calc\n",
+    "        f = np.concatenate((f_P, f_Q))\n",
+    "\n",
+    "        J1 = np.block([\n",
+    "            [H, N],\n",
+    "            [M, L]\n",
+    "        ])\n",
+    "\n",
+    "        incremento = np.linalg.solve(J1, -f)\n",
+    "        delta_theta = incremento[:len(theta)]\n",
+    "        delta_V = incremento[len(theta):]\n",
+    "\n",
+    "        theta += delta_theta\n",
+    "        V += delta_V\n",
+    "\n",
+    "        error = np.max(np.abs(f))\n",
+    "        iter += 1\n",
+    "\n",
+    "    if error > tol:\n",
+    "        print(f'El método de Newton-Raphson no convergió después de {max_iter} iteraciones.')\n",
+    "\n",
+    "    return V, theta  # Convertir theta de radianes a grados\n",
+    "\n",
+    "# Aplicar el método de Newton-Raphson\n",
+    "V_resultado, theta_resultado = newton_raphson(V_ini, np.radians(theta_ini), Y_real, Y_imag, P_inyectado, Q_inyectado)\n",
+    "\n",
+    "# Mostrar resultados\n",
+    "print(\"Resultados del método de Newton-Raphson:\")\n",
+    "print(\"Voltajes (en p.u.):\", V_resultado)\n",
+    "print(\"Ángulos (en grados):\", theta_resultado)\n"
    ]
   },
   {
